<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        layout="@layout/head_view_back"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvTitle2"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:text="@string/uWillPay"
            android:textColor="@color/payTv"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider" />



        <RelativeLayout
            android:id="@+id/rl_pay_zhifubao"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tvPayType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:textColor="@color/black"
                android:drawableLeft="@mipmap/icon_zfb"
                android:text="@string/payZFB"
                android:gravity="center_vertical"
                android:drawablePadding="8.5dp"
                android:layout_centerVertical="true"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/image_pay_zhifubao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:background="@drawable/selector_pay" />
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider" />
        <RelativeLayout
            android:id="@+id/rl_pay_weixin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:textColor="@color/black"
                android:drawableLeft="@mipmap/icon_wx"
                android:text="@string/payWx"
                android:gravity="center_vertical"
                android:drawablePadding="8.5dp"
                android:layout_centerVertical="true"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/image_pay_weixin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:background="@drawable/selector_pay" />
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/tvPay"
            android:layout_width="163dp"
            android:layout_height="38dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/clicker_orange"
            android:gravity="center"
            android:text="@string/payNow"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>

