<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@mipmap/home_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivBackSearch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:scaleType="center"
            android:src="@mipmap/yd_icon_back" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@drawable/circleback_searchet"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@mipmap/attention_icon_search" />

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/inputSearch"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/cancelSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:src="@mipmap/ss_icon_close" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvSearch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:paddingLeft="13dp"
            android:paddingRight="20.5dp"
            android:text="@string/sure"
            android:textColor="@color/white" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvEmpty"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:text="@string/noSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.csd.activitybase.view.AdjustHeightListview
            android:id="@+id/lvBeforSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/selectBack"
            android:cacheColorHint="@null"
            android:divider="@null"
            android:visibility="invisible"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:listSelector="@null"
            android:scrollbars="none" />

        <ListView
            android:id="@+id/lvAfterSearch"
            android:background="@color/selectCicle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="@null"
            android:divider="@null"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:listSelector="@null"
            android:scrollbars="none"
            android:visibility="invisible" />
    </RelativeLayout>

</LinearLayout>
